--- a/Ruby_Proj/W5D2/RedditClone/app/views/layouts/application.html.erb
+++ b/Ruby_Proj/W5D2/RedditClone/app/views/layouts/application.html.erb
@@ -10,6 +10,27 @@
   </head>
 
   <body>
+  <% if logged_in? %>
+  <h1><%= current_user.username %></h1>
+  <form action="<%= session_url %>" method="POST">
+  <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>">
+  <input type="hidden" name="_method" value="DELETE">
+  <input type="submit" value="Logout">
+  </form>
+  <% else %>
+  <a href="<%= new_user_url %>">Sign Up</a>
+  <a href="<%= new_session_url %>">Sign In</a>
+  <% end %>
+
+  <ul>
+    <% if flash[:errors] %>
+      <% flash[:errors].each do |error| %>
+          <li><%= error %></li>
+      <% end %>
+    <% end %>
+  </ul>
+  
+      
     <%= yield %>
   </body>
 </html>
